fixed previous commit error, figured out that my header and nav wrappers were overlapping. Fixed that

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -13,7 +13,6 @@ body{
 }
 .container{
     position: relative;
-    padding: 20px;
     margin: 0;
     text-align: center;
 }
